syntax = "proto3";

// import "google/protobuf/empty.proto";
import "slx.proto";

option go_package = "github.com/Wappsto/wedge-api/go/wedge";

package wedge;

// The  Wedge service definition.
service Wedge {
  rpc SetModel (SetModelRequest) returns (Replay) {}
  rpc SetDevice (SetDeviceRequest) returns (Replay) {}
  rpc SetValue (SetValueRequest) returns (Replay) {}
  rpc SetState (SetStateRequest) returns (Replay) {}
}

message Driver {
    string host = 2;
    uint32 port = 3;
}

message Model {
    Driver driver = 1;
    repeated Device device = 2;
}

// Create/Update all node data model
message SetModelRequest {
    Model model = 1;
}

message SetDeviceRequest {
    Driver driver = 1;
    Device device = 2;
}

message SetValueRequest {
    Driver driver = 1;
    uint32 device_id = 2;
    Value value = 3;
}

message SetStateRequest {
    Driver driver = 1;
    uint32 device_id = 2;
    uint32 value_id = 3;
    State state = 4;
}
